--- a/roop.ipynb
+++ b/roop.ipynb
@@ -44,8 +44,7 @@
         "\n",
         "脚本非常简单，应该没啥要解释的，如果有问题，通过下方渠道联系我\n",
         "\n",
-        "公众号：托尼不是塔克  \n",
-        "博客：[tonyisstark.com](https://www.tonyisstark.com/)"
+       "博客：[tonyisstark.com](https://www.myxinwen.top/)"
       ],
       "metadata": {
         "id": "glwNVbldZ1Id"
